...
  // Legal Screens
  PrivacyPolicy: undefined;
  TermsOfService: undefined;
};

export type TabParamList = {
  Home: undefined;
  Map: undefined;
  Camera: undefined;
  Chat: undefined;
  Profile: undefined;
}; 
